<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/layout_OldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/UpdatePasswordFragment_TextView_title_ConfirmOldPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/description_ChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="15dp"
                android:text="@string/UpdatePasswordFragment_TextView_label_Info"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/edit_OldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/UpdatePasswordFragment_EditText_hint_context"
                android:nextFocusForward="@+id/btn_NewPassword"
                android:nextFocusDown="@+id/btn_NewPassword" />

            <Button
                android:id="@+id/btn_NewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UpdatePasswordFragment_Button_ConfirmOldPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:backgroundTint="?attr/colorButtonNormal"
                android:nextFocusForward="@+id/edit_text_new_password"
                android:nextFocusDown="@+id/edit_text_new_password"
                android:focusableInTouchMode="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_UpdatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/UpdatePasswordFragment_TextView_title_ChangePassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/edit_text_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/UpdatePasswordFragment_EditText_hint_NewPassword"
                android:nextFocusForward="@+id/edit_text_new_password_confirm" />

            <EditText
                android:id="@+id/edit_text_new_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/UpdatePasswordFragment_EditText_hint_NewPasswordConfirm"
                android:nextFocusForward="@+id/btn_ChangePassword"
                android:nextFocusDown="@+id/btn_ChangePassword" />

            <Button
                android:id="@+id/btn_ChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UpdatePasswordFragment_Button_ChangePassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:backgroundTint="?attr/colorButtonNormal"
                android:focusableInTouchMode="true"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>