<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about_me.AboutMeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/title_aboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/AboutMeFragment_TextView_title_MyAccount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_aboutMe"
            android:layout_margin="10dp"
            android:maxLength="12"
            android:inputType="textPersonName"
            android:hint="@string/AboutMeFragment_EditText_hint_contextName"/>

        <EditText
            android:id="@+id/personDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personName"
            android:layout_margin="10dp"
            android:hint="@string/AboutMeFragment_EditText_hint_contextDescription"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="1"
            android:maxLines="10"
            android:gravity="top|start"
            android:maxLength="255"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            android:layout_below="@+id/personDescription">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/AboutMeFragment_TextView_label_ChangePassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Button
                android:id="@+id/btn_change_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/AboutMeFragment_Button_ChangePassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_exit_in_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/AboutMeFragment_Button_ExitInAccount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>